tests/fail/parser-escape7.dit
A {
    String value;
}

A a;

a.value = 'word \q word';